Fix layout issue for reports tables, which caused them to go off screen with no scrollbar.
* New one_column.css copied from full_width.css - constrains width as full_width.css did before.
* full_width.css now uses the full width of the browser window, rather than constrain.
* IE7 fix-script moved out of meta_tags.jsp file into its own file.


Former-commit-id: 3d91e5c1762ea1176707a2f427f26a76c371e06d

--- a/sparrow-web-ui/src/main/webapp/css/layout.css
+++ b/sparrow-web-ui/src/main/webapp/css/layout.css
@@ -186,7 +186,7 @@ clears this properly, but is unfortunately affected by this patch, which simply
 specifies a minimum height.
 */
 /* Set a min-height for most standards compliant browsers */
-html > body #page-area-container { min-height: 30em; }
+html > body #page-area-container { min-height: 30em; overflow: visible; }
 /*
 	Turn the min-height back off for *really* standards compliant browsers.
 	Tried using this rule:
